--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-.idea
-.venv
-/results
+# IDE
+.idea/
+.vscode/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual Environment
+.venv/
+venv/
+ENV/
+
+# Environment variables
+.env
+
+# Results directory
+results/
